# django-tutorial

./: .gitignore  pyproject.toml
config/: settings.py  urls.py
polls/: admin.py  models.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py
polls/templates/polls/: detail.html
