[tool.poetry]
name = "django-tutorial"
version = "0.1.0"
description = ""
authors = ["강석영 <ksge1124@gmail.com>"]
readme = "README.md"
packages = [{include = "django_tutorial"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
